# chappie

./: .gitignore  .gitmodules  Cargo.toml  README.md  parse_item.sh
.VSCodeCounter/2025-03-23_13-29-52/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-03-23_13-33-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-04-27_11-37-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
crates/llmapi/: Cargo.toml
crates/llmapi/src/: lib.rs
crates/llmapi_macro/: Cargo.toml
crates/llmapi_macro/src/: lib.rs
crates/vectorbase/example/disk/: Cargo.toml
data/chap/: mem.wal
data/chap/01JD55FYDZ5WK1KR945535F10C/: data.gy  meta.json
plugin/pg_page_header/: pg_page_header.lua
rust-lib/ask_gemini/: Cargo.toml  README.md
rust-lib/ask_gemini/src/: lib.rs  structs.rs
rust-lib/fastembed-rs/: Cargo.toml
rust-lib/hf-hub/src/api/: sync.rs
src/: byteutil.rs  chap.rs  cli.rs  cmd.rs  command.rs  edit.rs  editor.rs  error.rs  function.rs  gap_buffer.rs  handle.rs  hex.rs  lua.rs  main.rs  pg.rs  plugin.rs  text.rs  textwarp.rs  tui.rs  util.rs
src/chatapi/: gemini.rs  grop.rs  mod.rs
src/fuzzy/: bitap.rs  boyermoore.rs  levenshtein.rs  mod.rs  smithwaterman.rs
src/vb/: mod.rs  vectorbase.rs
