[package]
name = "chappie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/vectorbase",
  "crates/galois", 
  "crates/llmapi_macro", "crates/llmapi",
]

[dependencies]
clap = { version ="4.4.6",features = ["derive"]}
crossterm = "0.28.1"
memmap2 = "0.9.0"
ratatui = "0.29.0"
unicode-width = "0.1"
thiserror = "1.0.60"
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
groq-api-rs = "0.2.0"
tokio = {version ="1.40.0",features = ["full"]}
once_cell = "1.20.1"
vectorbase = {path = "crates/vectorbase", version = "0.0.1"}
fastembed = {path = "./rust-lib/fastembed-rs", version = "4.1.0", features = ["default"]}
galois = {path = "crates/galois", version = "0.1.0"}
llmapi = {path = "crates/llmapi", version = "0.0.1"}


