cargo-features = ["profile-rustflags"]

[package]
name = "chappie"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "chap"
path = "src/main.rs" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

rustflags = [
    "-C", "target-feature=+avx,+avx2,+fma,+f16c",
    "-C", "target-cpu=native"
]

[workspace]
members = [
  "crates/vectorbase",
  "crates/wwml", 
  "crates/wwml/galois-kernels", 
  "crates/llmapi_macro", 
  "crates/llmapi",
  "crates/llm-rs",
  "crates/aerogel",
]

[dependencies]
clap = { version ="4.4.6",features = ["derive", "env"]}  
crossterm = "0.28.1"
memmap2 = "0.9.0"
ratatui = "0.29.0"
unicode-width = "0.1"
thiserror = "1.0.60"
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
groq-api-rs = "0.2.0"
tokio = {version ="1.40.0",features = ["full"]}
once_cell = "1.20.1"
vectorbase = {path = "crates/vectorbase", version = "0.0.1"}
#fastembed = "4.1.0"
#fastembed = {path = "rust-lib/fastembed-rs", version = "4.2.0"}
wwml =  "0.1.0"
llmapi = {path = "crates/llmapi", version = "0.0.1"}
aerogel = {path = "crates/aerogel", version = "0.1.0"}
async-trait = "0.1"
anyhow = "1.0"
simplelog = "0.12.2"
log = "0.4"
atty = "0.2.14"
ask_gemini = {path = "rust-lib/ask_gemini", version = "0.1.4"}  
inherit-methods-macro = "0.1.0"
utf8_iter = "=1.0.2"
const-hex = "1.14.0"


