[package]
name = "ask_gemini"
version = "0.1.4"
edition = "2018"
description = "A library for interacting with the Google Gemini API"
repository = "https://github.com/vvmspace/ask_gemini"
authors = ["Vladimir V. Myagdeev <vvmyagdeev@gmail.com>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"